# kernel-shark

./: CMakeLists.txt  README
.github/workflows/: main.yml
Documentation/doxygen/: dox_config
examples/: CMakeLists.txt  configio.c  datafilter.c  datahisto.c  dataload.c  dataplot.cpp  multibufferload.c  widgetdemo.cpp
src/: CMakeLists.txt  KsAdvFilteringDialog.cpp  KsAdvFilteringDialog.hpp  KsCaptureDialog.cpp  KsCaptureDialog.hpp  KsDualMarker.cpp  KsDualMarker.hpp  KsGLWidget.cpp  KsGLWidget.hpp  KsMainWindow.cpp  KsMainWindow.hpp  KsModels.cpp  KsModels.hpp  KsPlotTools.cpp  KsPlotTools.hpp  KsPlugins.cpp  KsPlugins.hpp  KsPluginsGUI.cpp  KsPluginsGUI.hpp  KsQuickContextMenu.cpp  KsQuickContextMenu.hpp  KsSearchFSM.cpp  KsSession.cpp  KsSession.hpp  KsTraceGraph.cpp  KsTraceGraph.hpp  KsTraceViewer.cpp  KsTraceViewer.hpp  KsUtils.cpp  KsUtils.hpp  KsWidgetsLib.cpp  KsWidgetsLib.hpp  kernelshark.cpp  libkshark-collection.c  libkshark-configio.c  libkshark-hash.c  libkshark-model.c  libkshark-model.h  libkshark-plot.c  libkshark-plot.h  (+7 more)
src/plugins/: CMakeLists.txt  EventFieldDialog.cpp  EventFieldDialog.hpp  EventFieldPlot.cpp  KVMCombo.cpp  KVMComboDialog.cpp  KVMComboDialog.hpp  LatencyPlot.cpp  LatencyPlotDialog.cpp  LatencyPlotDialog.hpp  MissedEvents.cpp  SchedEvents.cpp  VirtComboPlotTools.hpp  common_sched.h  event_field_plot.c  event_field_plot.h  kvm_combo.c  kvm_combo.h  latency_plot.c  latency_plot.h  missed_events.c  missed_events.h  sched_events.c  sched_events.h
tests/: CMakeLists.txt  get_test_data.sh  libkshark-gui-tests.cpp  libkshark-tests.cpp  test-input.c  test-input_ctrl.c  test-plugin_dpi.c  test-plugin_dpi_ctrl.c  test-plugin_dpi_err.c
